--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/echarts": "^4.9.22",
     "antd": "^5.25.2",
     "axios": "^1.9.0",
     "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
+    "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
